ADD work on the warehouse catalogue page

--- a/docs/de-de/modules/daten/pages/lager-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/lager-exportieren.adoc
@@ -5,162 +5,321 @@
 :id: FUM682Y
 :author: team-stock
 
-Diese Handbuchseite enthält Informationen zum Export-Format *Lager*, mit dem du anhand von Katalogen Lagerdaten aus deinem plentymarkets System exportieren kannst.
-Solltest du mit der Funktionsweise der Kataloge noch nicht vertraut sein, informiere dich zunächst auf der Handbuchseite xref:daten:dateiexport.adoc#[Standardformate nutzen]. Dort ist beschrieben, wie du Kataloge erstellst und verwaltest.
+////
+zuletzt bearbeitet 08.08.2022
+////
+
+Diese Seite beschreibt die Datenfelder und Filter, die dir beim Export von Lagerdaten über das Katalog-Tool zur Verfügung stehen.
+Diese Seite dient lediglich als Referenz und setzt voraus, dass du bereits Grundkenntnisse über das xref:daten:dateiexport.adoc#[Katalog-Tool] hast.
+
+[discrete]
+==== Format-Typ: Lager
+
+Der auf dieser Seite beschriebene Format-Typ befindet sich im Menü *Daten » Kataloge*.
+Beim Erstellen eines neuen Katalogs wählst du zuerst das Standardformat aus der oberen Dropdown-Liste.
+Danach kannst du den Format-Typ *Lager* aus der mittleren Dropdown-Liste wählen.
+
+image::daten:katalog-lager.png[]
 
 [TIP]
-.Kein Export an Marktplätze
+.Was ist ein Standardformat?
 ====
-Bei dem Exportformat *Lager* handelt es sich um ein sog. Standardformat, d.h. ein Format, mit dem du Daten exportieren, aber nicht an einen Marktplatz übertragen kannst.
+
+* *_Definition_*:
+Ein Standardformat wird verwendet, um spezifische Daten aus deinem plentymarkets System zu exportieren.
+Falls nötig, kannst du die Daten anschließend überarbeiten und wieder importieren.
+
+* *_Beispiel_*:
+#Stell dir vor, du möchtest im Rahmen einer Wirtschaftsprüfung herausfinden, wie viel Bestand sich zum Jahresende in deinem Lager befand.
+Du könntest eine CSV-Datei mit den Bestandsdaten exportieren.#
+
+* *_Abgrenzung_*:
+Beachte, dass Standardformate lediglich Daten aus deinem System exportieren.
+Sie übertragen diese Daten nicht an Marktplätze.
 ====
 
 [#10]
-== Verfügbare Datenfelder
+== Datenfelder
 
-In der folgenden Tabelle findest du alle verfügbaren Datenfelder des Export-Formats *Lager* sowie eine Erläuterung zur Bedeutung dieser Felder.
+Dieses Kapitel enthält eine Liste aller Lager-Datenfelder, die mit dem Katalog-Tool exportiert werden können.
 
-[[tabelle-lager]]
-.Datenfelder für Lagerdaten
-[cols="2,3"]
+=== Lager
+
+[cols="1,3a"]
 |===
-|*Datenfeld* |*Erläuterung*
+|Feld |Erläuterung
 
-2+^|*Lager*
+| *Lager-ID*
+|
+Die ID des Lagers.
 
-|*Lager-ID*
-|ID des Lagers
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Feld: ID].
 
-|*Lagername*
-|Name des Lagers
+| *Lagername*
+|
+Der Name des Lagers.
 
-|*Notiz*
-|Notizen zum Lager
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Eingabefeld: Lagername].
 
-|*Lagertyp-ID*
-|ID des Lager-Typs
+| *Notiz*
+|
+Die Notiz des Lagers.
 
-|*Verfügbarkeit mit Bestand*
-|Verfügbarkeit der Varianten mit Bestand
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Eingabefeld: Notiz].
 
-|*Verfügbarkeit ohne Bestand*
-|Verfügbarkeit der Varianten ohne Bestand
 
-|*Nach Versandprofil aufteilen*
-|Aufteilung nach Versandprofil
+| *Lagertyp-ID*
+|
+Der Typ des Lagers.
+Wird durch die Lagertyp-ID angegeben.
 
-|*Reparaturlager-ID*
-|ID des Reparaturlagers
+[cols="1,1"]
+!===
 
-|*Inventurmodus aktiv*
-|Zeigt an, ob der Inventurmodus aktiv ist
+!`0`
+!Vertrieb
 
-|*Logistiktyp*
-|Logistiktyp
+!`1`
+!Reparatur
 
-|*Aktualisiert am*
-|Datum der Aktualisierung
+!`4`
+!Vorrat
 
-|*Erstellt am*
-|Erstelldatum
+!`5`
+!Umschlag
 
-2+^|*Dimension*
+!`6`
+!Verteiler
 
-|*Ebene*
-|Ebene
+!`7`
+!Sonstiges
+!===
 
-|*Name der Elterndimension*
-|Name der übergeordneten Dimension
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Lagertyp].
 
-|*Präfix der Dimension*
-|Präfix der Dimension
+| *Verfügbarkeit mit Bestand*
+|
+Die Verfügbarkeit mit Bestand.
 
-|*Trenner*
-|Trennzeichen
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Verfügbarkeit mit Bestand].
 
-|*Im Namen anzeigen*
-|Im Lagerortnamen anzeigen
+| *Verfügbarkeit ohne Bestand*
+|
+Die Verfügbarkeit ohne Bestand.
 
-|*Für Laufweg berücksichtigen*
-|In den Laufweg einfließen lassen
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Verfügbarkeit ohne Bestand].
 
-2+^|*Lagerort*
+| *Nach Versandprofil aufteilen*
+|
+Gibt an, ob nach Versandprofil gesplittet wird.
 
-|*Lagerort-ID*
-|ID des Lagerortes
+[cols="1,1"]
+!===
 
-|*Lagerortname*
-|Name des Lagerortes (ohne Pfad)
+!Zeile ist leer
+!Nein
 
-|*Zweck*
-|Verwendungszweck des Lagerortes
+!`1`
+!Ja
 
-|*Status*
-|Status des Lagerortes
+!===
 
-|*Position*
-|Position des Lagerortes
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Nach Versandprofil splitten].
 
-|*Vollständiger Lagerortname*
-|Vollständiger Name des Lagerortes (inklusive Pfad)
+| *Reparaturlager-ID*
+|
+Die ID des zugeordneten Reparaturlagers.
 
-|*Lagerort-Typ*
-|Typ des Lagerortes
+*_Hinweis_*:
+In der Export-Datei bedeutet `0`, dass kein Reparaturlager zugeordnet wurde.
+Das heißt, die Einstellung --- ist gesetzt.
 
-|*Notizen*
-|Notizen zum Lagerort
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Zugeordnetes Reparaturlager].
 
-|*Verfügbarkeit*
-|Verfügbarkeit des Lagerortes: Ist ein Lagerort leer, wird er beim Wareneingang als verfügbar angezeigt und Ware kann eingebucht werden. Befindet sich bereits 1 Artikel in einem Lagerort, wird dieser nicht mehr als verfügbar angezeigt. Du kannst dort allerdings trotzdem Ware einbuchen. +
+| *Inventurmodus aktiv*
+|
+Gibt an, ob der Inventurmodus aktiviert ist.
+
+[cols="1,1"]
+!===
+
+!Zeile ist leer
+!Nein. Häkchen ist nicht gesetzt.
+
+!`1`
+!Ja. Häkchen ist gesetzt.
+
+!===
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Checkbox: Inventur-Modus aktiv].
+
+| *Logistiktyp*
+|
+Der Logistiktyp des Lagers.
+
+[cols="1,1"]
+!===
+
+!`own`
+!Eigenes Lager
+
+!`amazon`
+!Amazon
+
+!`dhlFulfillment`
+!DHL Fulfillment
+
+!===
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Logistiktyp].
+
+| *Aktualisiert am*
+|
+Der Zeitstempel, der angibt, wann das Lager zuletzt geändert wurde.
+
+| *Erstellt am*
+|
+Der Zeitstempel, der angibt, wann das Lager erstellt wurde.
+
+|===
+
+=== Dimension
+
+[cols="1,3a"]
+|===
+|Feld |Erläuterung
+
+| *Ebene*
+|
+Ebene
+
+| *Name der Elterndimension*
+|
+Name der übergeordneten Dimension
+
+| *Präfix der Dimension*
+|
+Präfix der Dimension
+
+| *Trenner*
+|
+Trennzeichen
+
+| *Im Namen anzeigen*
+|
+Im Lagerortnamen anzeigen
+
+| *Für Laufweg berücksichtigen*
+|
+In den Laufweg einfließen lassen
+
+|===
+
+=== Lagerort
+
+[cols="1,3a"]
+|===
+|Feld |Erläuterung
+
+| *Lagerort-ID*
+|
+ID des Lagerortes
+
+| *Lagerortname*
+|
+Name des Lagerortes (ohne Pfad)
+
+| *Zweck*
+|
+Verwendungszweck des Lagerortes
+
+| *Status*
+|
+Status des Lagerortes
+
+| *Position*
+|
+Position des Lagerortes
+
+| *Vollständiger Lagerortname*
+|
+Vollständiger Name des Lagerortes (inklusive Pfad)
+
+| *Lagerort-Typ*
+|
+Typ des Lagerortes
+
+| *Notizen*
+|
+Notizen zum Lagerort
+
+| *Verfügbarkeit*
+|
+Verfügbarkeit des Lagerortes: Ist ein Lagerort leer, wird er beim Wareneingang als verfügbar angezeigt und Ware kann eingebucht werden. Befindet sich bereits 1 Artikel in einem Lagerort, wird dieser nicht mehr als verfügbar angezeigt. Du kannst dort allerdings trotzdem Ware einbuchen. +
 Beim Export gibt es die beiden folgenden Werte: `0` = nicht verfügbar; `1` = verfügbar.
 
-2+^|*Ebene*
+|===
 
-|*Ebenen-ID*
-|ID der Ebene bzw. der niedrigsten Dimension des Lagerortes. Nutzt du einen Filter, ist es die ID der gefilterten Dimension.
+=== Ebene
 
-|*ID der Elternebene*
-|ID der übergeordneten Ebene
+[cols="1,3a"]
+|===
+|Feld |Erläuterung
 
-|*Position der Ebene*
-|Position der Ebene
+| *Ebenen-ID*
+|
+ID der Ebene bzw. der niedrigsten Dimension des Lagerortes. Nutzt du einen Filter, ist es die ID der gefilterten Dimension.
 
-|*Name der Ebene*
-|Name der Ebene
+| *ID der Elternebene*
+|
+ID der übergeordneten Ebene
 
-|*Pfadname der Ebene*
-|Pfadname
+| *Position der Ebene*
+|
+Position der Ebene
+
+| *Name der Ebene*
+|
+Name der Ebene
+
+| *Pfadname der Ebene*
+|
+Pfadname
 
 |===
 
 [#20]
-== Filter hinzufügen
+== Filter
 
-Um nur bestimmte Lagerdaten zu exportieren, kannst du Filter wählen und somit die Daten eingrenzen. Wie du Filter hinzufügst, erfährst du in xref:daten:dateiexport.adoc#filter-data[diesem Kapitel].
+Dieses Kapitel enthält eine Liste der Filter, mit denen du einschränken kannst, welche Daten in die Exportdatei aufgenommen werden sollen.
 
-[#30]
-=== Verfügbare Filter
+[TIP]
+.Filter können kombiniert werden
+====
+Du kannst mehrere Filter wählen und somit #beispielsweise nach Warenbeständen aus einem bestimmten Lager mit einer bestimmten Markierung filtern.#
+====
 
-In der folgenden Tabelle findest du alle für das Export-Format *Lager* verfügbaren Filter sowie eine Erläuterung zur Funktion des jeweiligen Filters.
-
-[[tabelle-filter-lager]]
-.Filter für Lagerdaten
-[cols="2,3"]
+[cols="1,3a"]
 |===
-|*Filter* |*Erläuterung*
+|Filter |Erläuterung
 
-|*Lager*
-|Beschränkt den Export auf die gewählten Lager. Wähle ein oder mehrere Lager aus der Dropdown-Liste.
+| *Lager*
+|
+Beschränkt den Export auf die gewählten Lager. Wähle ein oder mehrere Lager aus der Dropdown-Liste.
 
-|*Dimensions-Ebene*
-|Beschränkt den Export auf eine bestimmte Ebene eines Lagers.
+| *Dimensions-Ebene*
+|
+Beschränkt den Export auf eine bestimmte Ebene eines Lagers.
 Hast du eine Ebene gewählt, z.B. Ebene 3, werden nur die Dimensionen dieser Ebene exportiert. +
 Bei einer Lagerstruktur mit dem Aufbau *Halle > Regal > Fach > Boden > Lagerort* würden also alle Fächer exportiert werden, da diese die 3. Ebene bilden. +
 *_Tipp:_* Klicke auf *Vorschau*, um zu prüfen, welche Daten für den Export gewählt wurden.
 
-|*Pfadname der Ebene beginnend mit*
-|Beschränkt den Export auf die Daten unterhalb einer bestimmten Dimension. Lautet der Pfadname der Ebene beispielsweise *Halle 1 - Regal 4 - Fach 3 - Boden 8* und du möchtest alles unterhalb von Boden 8 der spezifischen Dimension exportieren, gib `H1-R4-F3-B8` in das Eingabefeld des Filters ein.
+| *Pfadname der Ebene beginnend mit*
+|
+Beschränkt den Export auf die Daten unterhalb einer bestimmten Dimension. Lautet der Pfadname der Ebene beispielsweise *Halle 1 - Regal 4 - Fach 3 - Boden 8* und du möchtest alles unterhalb von Boden 8 der spezifischen Dimension exportieren, gib `H1-R4-F3-B8` in das Eingabefeld des Filters ein.
 
-|*Nur Lagerdaten*
-|Beschränkt den Export auf die Lagerdaten, wie die Lager-ID und den Lagernamen.
+| *Nur Lagerdaten*
+|
+Beschränkt den Export auf die Lagerdaten, wie die Lager-ID und den Lagernamen.
 Standardmäßig werden mit diesem Filter die Daten aller Lager exportiert. Möchtest du allerdings nur die Daten bestimmter Lager exportieren, wähle zusätzlich den Filter *Lager*.
 |===
