ADD user rights and more

--- a/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
@@ -1,6 +1,6 @@
 = Auftragstyp Lieferauftrag
 
-:keywords: Lieferauftrag, Lieferschein
+:keywords: Lieferauftrag, Lieferschein, Aufträge splitten, Ereignisaktion für Lieferaufträge
 :author: team-order-core
 
 Mithilfe des Auftragstyps *Lieferauftrag* werden aus einem Hauptauftrag Lieferaufträge für die enthaltenen Auftragspositionen generiert, sodass du diese einzeln oder in Teilen verschicken kannst. So kannst du beispielsweise Artikel, die du auf Lager hast, sofort losschicken und Artikel, die du erst noch geliefert bekommst, später nachsenden. Führe dies mit unterschiedlichen oder auch nur mit einem einzelnen Versanddienstleister durch. +
