--- a/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
+++ b/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
@@ -1,6 +1,6 @@
 = Aufträge (beta)
 
-:keywords:
+:keywords: Aufträge open beta, neue order UI, Aufträge neue UI,
 :author: team-order-core
 
 Die neue Auftrags-UI befindet sich nun in der sogenannten _open beta-Phase_. Somit stellen wir dir das neue Menü unter *Aufträge » Aufträge (Testphase)* nun zum Kennenlernen und Ausprobieren zur Verfügung und werden weiter an der Performance arbeiten und verschiedene Anpassungen vornehmen. Die bisherige Auftrags-UI im Menü unter *Aufträge » Aufträge bearbeiten* steht dir parallel weiterhin zur Verfügung.
@@ -13,7 +13,7 @@ Das Menü *Aufträge » Aufträge (Testphase)* ist wie folgt aufgebaut:
 //Screenshot erstellen
 image::....png[width=640, height=360]
 
-* *Navigation*: In der Navigation links navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Falls du mehrere Aufträge, Auftragstypen oder Varianten gleichzeitig geöffnet hast, werden diese untereinander angezeigt. Klicke auf material:menu[], um die Navigationsleiste ein- und auszublenden.
+* *Navigation*: In der Navigation links navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Falls du mehrere Aufträge, Auftragstypen oder Varianten gleichzeitig geöffnet hast, werden diese untereinander angezeigt. Klicke auf material:menu[], um die Navigationsleiste ein- oder auszublenden.
 Die Seitennavigation wird automatisch angepasst, wenn sich Einträge verschieben, Einträge entfernt oder hinzugefügt werden.
 * *Toolbar*: Hier kannst du nach Aufträgen xref:auftraege:working-with-orders.adoc#order-search[suchen], die xref:auftraege:working-with-orders.adoc#configure-columns[Spalten in der Übersicht konfigurieren], die Ergebnisse pro Seite, die du angezeigt haben möchtest, einstellen und durch die Seiten mit den Aufträgen klicken. +
 Wenn du mehrere Aufträge gewählt hast (material:check_box[role=skyBlue]), kannst du in diesem Bereich auch die xref:auftraege:working-with-orders.adoc#order-group-functions[Gruppenfunktionen] nutzen.
@@ -22,7 +22,7 @@ Wenn du mehrere Aufträge gewählt hast (material:check_box[role=skyBlue]), kann
 Die Übersicht liefert auf einen Blick alle relevanten Informationen zu den gefundenen Aufträgen.
 ** *Detailansicht*: Wenn du einen Auftrag öffnest, werden die Details im Hauptfenster auf der rechten Seite angezeigt.
 Was aber, wenn das Hauptfenster leer ist? Oder was, wenn du mit der Anordnung der Auftragsdetails nicht zufrieden bist?
-Du kannst eine xref:auftraege:design-order-view.adoc#200[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
+Du kannst eine xref:auftraege:design-order-view.adoc[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
 
 
 [TIP]
