--- a/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
@@ -1,10 +1,9 @@
 = Auftragstyp Gutschrift
 
-:keywords:
+:keywords: Gutschrift, Gutschriftauftrag, Gutschriftbeleg, Gutschriftbeleg stornieren, Rückzahlung, Warenbestand zurückbuchen
 :author: team-order-core
 
-Bei einer Gutschrift bekommen deine Kund:innen einen Betrag zurückerstattet. Dies kann beispielsweise nach einer xref:auftraege:order-type-return.adoc#[Retoure] der Fall sein. Bei der Gutschrift in plentymarkets handelt es sich also nicht um eine Art umgekehrte Rechnung, sondern um eine Rückzahlung. Gutschriftaufträge erzeugst du unter *Aufträge » Aufträge (Testphase)* aus einem Auftrag. Eine Gutschrift ist also immer einem Auftrag zugeordnet. Die in einem Gutschriftauftrag erzeugten Gutschriftbelege werden auch in Buchhaltungsexporten, wie dem *DATEV*-Export, berücksichtigt.
-//gibt es den DATEV-Export noch?
+Bei einer Gutschrift bekommen deine Kund:innen einen Betrag zurückerstattet. Dies kann beispielsweise nach einer xref:auftraege:order-type-return.adoc#[Retoure] der Fall sein. Bei der Gutschrift in plentymarkets handelt es sich also nicht um eine Art umgekehrte Rechnung, sondern um eine Rückzahlung. Gutschriftaufträge erzeugst du unter *Aufträge » Aufträge (Testphase)* aus einem Auftrag. Eine Gutschrift ist also immer einem Auftrag zugeordnet. Die in einem Gutschriftauftrag erzeugten Gutschriftbelege werden auch in Buchhaltungsexporten, wie dem xref:auftraege:buchhaltung.adoc#650[DATEV-Export], berücksichtigt.
 
 [#saving-standard-status]
 == Standardstatus für Gutschriften speichern
@@ -32,19 +31,19 @@ Gutschriftauftrag anlegen:
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Suche (material:search[]) den Auftrag, zu dem du eine Gutschrift anlegen möchtest.
 . Öffne den Auftrag.
-. Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]).
+. Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Gutschrift*.
 . Wähle eine Option. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
 . *Speichere* (material:save[]) die Einstellungen. +
 → Der Gutschriftauftrag wird angelegt.
 
 include::partial$create-order-type.adoc[]
 
-// auf neue UI anpassen
+// auf neue UI anpassen - kann gelöscht werden?
 Wenn bereits ein Gutschriftauftrag zu einem Auftrag angelegt wurde, wird im Tab *Übersicht* des Haupfauftrags rechts der Hinweis *Gutschrift verfügbar* angezeigt. Zusätzlich kannst du bereits angelegte Gutschriftaufträge im Tab *Übersicht* des Hauptauftrags über die Dropdown-Liste *Gutschrift / suchen* aufrufen.
 
 [#530]
 == Gutschriftbeleg erstellen
-
+// noch notwendig?
 Nach dem Anlegen des Gutschriftauftrags muss ein Gutschriftbeleg direkt im Gutschriftauftrag erstellt werden. Vor dem ersten Erzeugen eines xref:auftraege:gutschriften-erzeugen.adoc#[Gutschriftbelegs], muss die Dokumentenvorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Gutschrift* eingerichtet werden.
 
 // Tab Belege anpassen auf neue UI?
@@ -146,7 +145,7 @@ Warenbestand zurückbuchen:
 . Wechsle in das Tab *Einstellungen*.
 . Klicke bei der Option *Warenausgang* auf den Link *Warenbestand einbuchen*.
 . Wähle im angezeigten Fenster die gewünschte Option gemäß den Erläuterungen in <<table-settings-reverse-stock>>.
-. Klicke auf *Speichern* (material:save[role="green"]), um den Vorgang auszuführen.
+. Klicke auf *Speichern* (material:save[]), um den Vorgang auszuführen.
 
 [[table-settings-reverse-stock]]
 .Optionen zur Rückbuchung des Warenbestandes
