--- a/docs/de-de/modules/auftraege/pages/order-types.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-types.adoc
@@ -1,5 +1,8 @@
 = Auftragstypen
 
+:keywords: Auftragstypen, Übersicht Auftragstypen
+:author: team-order-core
+
 Mithilfe von Auftragstypen werden die unterschiedlichen Geschäftsvorfälle von Aufträgen kenntlich gemacht. Welche Möglichkeiten dir Auftragstypen bieten und wie du mit diesen arbeitest, erfährst du auf den folgenden Seiten.
 Die folgenden Auftragstypen stehen dir in plentymarkets zur Verfügung.
 
