Hood Pay - DE+EN

--- a/docs/en-gb/modules/markets/pages/hood.adoc
+++ b/docs/en-gb/modules/markets/pages/hood.adoc
@@ -98,6 +98,8 @@ Linking shipping profiles:
 
 Set up the payment methods that you would like to use for this market. This is done within your account on Hood. Choose between different options, for example bank transfer (cash in advance), purchase on invoice or PayPal. The payment methods are then available in the listing.
 
+Since 1st August 2022, Hood also offers its own payment service. When you use HoodPay, all payments are collected by Hood. You can activate this payment service in your account on Hood. In plentymarkets, HoodPay orders are imported with the payment method *Hood Pay* and the status [5].
+
 [#600]
 === Automatically posting feedback
 
