--- a/docs/de-de/modules/maerkte/pages/hood.adoc
+++ b/docs/de-de/modules/maerkte/pages/hood.adoc
@@ -96,7 +96,9 @@ Versandprofile verknüpfen:
 [#500]
 === Zahlungsarten einrichten
 
-Die Zahlungsarten, die du für den Marktplatz benötigst, richtest du zunächst in deinem Konto bei Hood ein. Wähle zwischen mehreren Optionen wie zum Beispiel Vorkasse per Überweisung, Kauf auf Rechnung oder PayPal. Die Zahlungsarten stehen im Listing zur Verfügung.
+Die Zahlungsarten, die du für den Marktplatz benötigst, richtest du zuerst in deinem Konto bei Hood ein. Wähle zwischen mehreren Optionen wie zum Beispiel Vorkasse per Überweisung, Kauf auf Rechnung oder PayPal. Die Zahlungsarten stehen im Listing zur Verfügung.
+
+Seit 1. August 2022 bietet Hood auch einen eigenen Zahlungsdienst an. Wenn du HoodPay nutzt, laufen alle Zahlungen über Hood. Diesen Zahlungsdienst aktivierst du in deinem Konto bei Hood. In plentymarkets werden HoodPay-Aufträge mit der Zahlungsart *Hood Pay* und dem Status [5] importiert.
 
 [#600]
 === Bewertungen automatisch abgeben
