Update EmailBuilder based on new structure

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -23,10 +23,13 @@ Die Header- und Footer-Vorlagen kannst du dann beliebig in deinen E-Mail-Vorlage
 
 Mit dem Header, dem Footer und den Einstellungen in der Vorlage wie Name, Betreff etc. erstellst du sozusagen das Gerüst deiner E-Mail. Den Inhalt der Vorlage bildest du mit den <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>>. Die Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt. Zum Beispiel wird die Variable `Lieferadresse Vorname und Nachname` in der E-Mail dann durch den Vor- und Nachnamen deines Kontakts aus der Lieferadresse ausgegeben.
 
+////
 Dieses Video bietet dir eine Einführung in das Thema:
 
 .EmailBuilder: Überblick
 video::580717951[vimeo]
+
+////
 
 Außerdem kannst du einstellen, dass dein plentymarkets System bei bestimmten Ereignissen, z.B. beim Eingehen neuer Bestellungen in deinem plentyShop oder nachdem Kund:innen deinen Newsletter abonniert haben, <<#e-mail-versand-automatisieren, automatisch E-Mails aus diesen Vorlagen>> erstellt und an deine Kund:innen versendet.
 
@@ -159,10 +162,12 @@ Ordner erstellen:
 [TIP]
 Wenn du alle Einstellungen wie im Folgenden beschrieben vorgenommen hast – also Unterordner, Vorlagen, Header und Footer erstellt hast –, kannst du den Hauptordner mit einem Klick auf material:chevron_right[] öffnen. Dort siehst du dann auf einen Blick alle Unterordner, Vorlagen, Header und Footer, die du direkt unter dem Hauptordner erstellt hast.
 
+//// 
 In diesem Video zeigen wir dir, wie du Ordner im EmailBuilder erstellst:
 
 .EmailBuilder: Ordner erstellen
 video::580717879[vimeo]
+////
 
 [#order-umbenennen]
 === Ordner umbenennen
@@ -262,10 +267,12 @@ Vorlage für den Header erstellen:
 . Bearbeite den Header nach deinen Wünschen und füge <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> ein.
 . *Speichere* die Einstellungen.
 
+//// 
 In diesem Video zeigen wir dir, wie du einen Header im EmailBuilder erstellst:
 
 .EmailBuilder: Header erstellen
 video::580717711[vimeo]
+////
 
 [#header-vorschau-anzeigen]
 [discrete]
@@ -304,10 +311,12 @@ Vorlage für den Footer erstellen:
 . Bearbeite den Footer nach deinen Wünschen und füge <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> ein.
 . *Speichere* die Einstellungen.
 
+//// 
 In diesem Video zeigen wir dir, wie du einen Footer im EmailBuilder erstellst:
 
 .EmailBuilder: Footer erstellen
 video::580717037[vimeo]
+////
 
 [#footer-vorschau-anzeigen]
 [discrete]
@@ -340,6 +349,10 @@ Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst d
 [[image-emailbuilder-template]]
 .Neue Vorlage im EmailBuilder erstellen
 image::crm:emailbuilder-neue-vorlage-erstellen.png[width=640, height=360]
+
+////
+TODO: Screenshot erneuern.
+////
 
 [.instruction]
 Vorlage erstellen:
@@ -445,10 +458,12 @@ Die Liste enthält alle <<#footer-erstellen, Footer>>, die du bereits erstellt h
 
 Gestalte nun den Inhalt deiner E-Mail, indem du über die Widgets Variablen einfügst. Wie du dazu vorgehst, ist im folgenden Kapitel <<#widget-einfuegen, Widget in Vorlage einfügen>> beschrieben.
 
+//// 
 In diesem Video zeigen wir dir, wie du eine Vorlage mit Widgets erstellst:
 
 .EmailBuilder: Vorlage mit Widget erstellen
 video::580718073[vimeo]
+////
 
 [#widget-einfuegen]
 === Widget in Vorlage einfügen
@@ -470,6 +485,10 @@ Beispielsweise findest du im Widget *Auftragspositionen* eine vordefinierte List
 [[image-emailbuilder-widget-order-items]]
 .Bearbeitungsmodus des vordefinierten Widget *Auftragspositionen*
 image::crm:emailbuilder-bearbeitungsmodus-auftragspositionen.png[width=640, height=360]
+
+////
+TODO: Screenshot erneuern.
+////
 
 In <<#table-available-widgets-emailbuilder>> findest du alle im EmailBuilder verfügbaren Widgets sowie eine Erläuterung, wie du die Widgets verwenden kannst.
 
@@ -621,6 +640,10 @@ Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst d
 [[image-emailbuilder-example-default-template]]
 .Beispiel: Standardvorlage *Auftrag: Versandbestätigung*
 image::crm:emailbuilder-example-default-template.png[width=640, height=360]
+
+////
+TODO: Screenshot erneuern.
+////
 
 Möchtest du wissen, welche Standardvorlagen bereits im EmailBuilder vorhanden sind und wie deren Betreff lautet? Dann klappe den folgenden Bereich mit einem Klick auf material:expand_more[] einfach auf.
 
