--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -107,7 +107,7 @@ https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-V
 | * Du verwendest die Zahlungsmethode *Galaxus Direct Checkout*.
 | * Du verwendest die Zahlungsmethode *Galaxus Direct Checkout Fisc Rep*.
 * Du aktivierst die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport*.
-* Im Standort *Schweiz* ist deine Umsatzsteuer-ID für die Schweiz gespeichert.
+* Im Standort *Deutschland* speicherst du deine Umsatzsteuer-ID für die Schweiz.
 
 2+^| Ablauf bei Auftragsimport
 
@@ -810,7 +810,7 @@ Du richtest zum ersten Mal Auftragsdokumente ein? Dann informiere dich auf der H
 [#invoices]
 === Rechnungen vorbereiten
 
-Wie deine Rechnung aussehen muss hängt davon ab, ob du den EU-Hub nutzt und ob du eine Fiskalvertretung in der Schweiz hast oder nicht.
+Wie deine Rechnungen aussehen müssen hängt davon ab, ob du den EU-Hub nutzt und ob du eine Fiskalvertretung in der Schweiz hast oder nicht.
 
 *_Wichtig:_* Stand dieser Informationen ist der 15. Juli 2022. Prüfe in der link:https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Dokumentation von Galaxus^], ob die Anforderungen noch aktuell sind.
 
@@ -819,8 +819,7 @@ Wie deine Rechnung aussehen muss hängt davon ab, ob du den EU-Hub nutzt und ob 
 EU-Hub ohne Fiskalvertretung::
 +
 --
-
-*_Exporthandelsrechnungen für Händler:innen ohne Fiskalvertretung müssen mindestens folgende Informationen enthalten:_*
+Exporthandelsrechnungen für Händler:innen ohne Fiskalvertretung müssen mindestens folgende Informationen enthalten:
 
 * Name und Adresse des Rechnungsstellers
 * Rechnungsadresse der Kund:in in der Schweiz
@@ -833,7 +832,7 @@ EU-Hub ohne Fiskalvertretung::
 `Vielen Dank für Ihre Bestellung! Der Rechnungsbetrag wurde bereits auf www.galaxus.ch bezahlt.` +
 `Bestellungen über www.galaxus.ch unterliegen den AGB der Digitec Galaxus AG. Bei einer allfälligen Retoure bitten wir Sie unbedingt den geführten Retourenprozess in Ihrem Kundenkonto auf www.galaxus.ch zu nutzen.`
 
-*_Folgende Informationen dürfen Rechnungen nicht enthalten:_*
+Folgende Informationen dürfen nicht auf den Rechnungen erscheinen:
 
 * Eine Rücksendeadresse in der EU
 * Die Lieferadresse des EU-Hubs in Efringen-Kirchen
@@ -846,11 +845,22 @@ image::maerkte:201120_DIGGAX_ohne_Fiskalvertreter.png[]
 Damit diese Informationen auf den Rechnungen erscheinen, gehe wie unten beschrieben vor.
 
 [.instruction]
+Steuersätze für die Schweiz speichern:
+
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Buchhaltung » Tab: Umsatzsteuer*.
+. Klicke auf *Neue Konfiguration*.
+. Wähle das Land *Schweiz*.
+. Gib die Umsatzsteuersätze für die Schweiz ein. +
+*_Wichtig:_* Steuerkonfigurationen können im Nachhinein nicht mehr geändert werden. +
+xref:auftraege:buchhaltung.adoc#550[Weitere Informationen]
+. Speichere die Einstellungen.
+
+[.instruction]
 PDF-Vorlage für Rechnungen hochladen:
 
 . Erstelle eine PFD-Vorlage für Rechnungen, die die Anforderungen von Galaxus erfüllt. +
 *_Tipp:_* Schau dir vorher die zusätzlichen Einstellungen in <<#table-invoices-no-fiscal-rep>> an. Vielleicht kannst du die dort beschriebenen Hinweise auch direkt in deiner PDF-Vorlage für Rechnungen von Galaxus platzieren?
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » Standort: Schweiz » Dokumente » Rechnung*.
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » Standort: Deutschland » Dokumente » Rechnung*.
 . Wechsele in das Tab *PDF-Vorlage*.
 . Klicke auf *Vorlage hinzufügen*. +
 → Das Bearbeitungsfenster *Neue PDF-Vorlage hochladen* wird geöffnet.
@@ -867,9 +877,11 @@ PDF-Vorlage für Rechnungen hochladen:
 *_Tipp:_* Passe im selben Menü auch gleich die plentymarkets Vorlage für Rechnungen an. Wie das geht, ist im nächsten Kapitel beschrieben.
 
 [.instruction]
-PDF-Vorlage für Rechnungen anpassen:
+Vorlage für Rechnungen anpassen:
 
-. Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Schweiz » Dokumente » Rechnung » Tab: Vorlage*.
+. Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Deutschland » Dokumente » Rechnung » Tab: Vorlage*.
+. Stelle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* ein.
+*_Wichtig:_* Diese Einstellung gilt für alle Rechnungen des Standorts, nicht nur für Galaxus.
 . Navigiere zum Bereich *Optionale Elemente unter Artikelpositionstabelle*.
 . Nimm die in <<table-delivery-notes>> beschriebenen Einstellungen vor. +
 *_Tipp:_* Je nachdem, wie du dein Layout gestaltest, kannst du vielleicht auch alle Hinweise in dasselbe Eingabefeld *Zahlungshinweis* einfügen.
@@ -934,11 +946,9 @@ EU-Hub mit Fiskalvertretung::
 --
 *_Voraussetzungen:_*
 
-* Du hast die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport* aktiviert.
-* Du hast den Standort *Schweiz* erstellt und deine Umsatzsteuer-ID für die Schweiz gespeichert.
+* Du hast im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport* die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* aktiviert.
 
-
-*_Exporthandelsrechnungen für Händler:innen mit Fiskalvertretung müssen mindestens folgende Informationen enthalten:_*
+Exporthandelsrechnungen für Händler:innen mit Fiskalvertretung müssen mindestens folgende Informationen enthalten:
 
 * Name und Adresse des Rechnungsstellers
 * Rechnungsadresse der Kund:in in der Schweiz
@@ -952,7 +962,7 @@ EU-Hub mit Fiskalvertretung::
 `Vielen Dank für Ihre Bestellung! Der Rechnungsbetrag wurde bereits auf www.galaxus.ch bezahlt.` +
 `Bestellungen über www.galaxus.ch unterliegen den AGB der Digitec Galaxus AG. Bei einer allfälligen Retoure bitten wir Sie unbedingt den geführten Retourenprozess in Ihrem Kundenkonto auf www.galaxus.ch zu nutzen.`
 
-*_Folgende Informationen dürfen Rechnungen nicht enthalten:_*
+Folgende Informationen dürfen nicht auf den Rechnungen erscheinen:
 
 * Eine Rücksendeadresse in der EU
 * Die Lieferadresse des EU-Hubs in Efringen-Kirchen
@@ -965,11 +975,23 @@ image::maerkte:201120_DIGGAX_Exporthandelsrechnung_mit_Fiskalvertreter.png[]
 Damit diese Informationen auf den Rechnungen erscheinen, gehe wie unten beschrieben vor.
 
 [.instruction]
+Steuersätze für die Schweiz speichern:
+
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Buchhaltung » Tab: Umsatzsteuer*.
+. Klicke auf *Neue Konfiguration*.
+. Wähle das Land *Schweiz*.
+. Gib die Umsatzsteuersätze für die Schweiz ein.
+. Gib deine Umsatzsteuer-ID für die Schweiz ein.
+*_Wichtig:_* Steuerkonfigurationen können im Nachhinein nicht mehr geändert werden. +
+xref:auftraege:buchhaltung.adoc#550[Weitere Informationen]
+. Speichere die Einstellungen.
+
+[.instruction]
 PDF-Vorlage für Rechnungen hochladen:
 
 . Erstelle eine PFD-Vorlage für Rechnungen, die die Anforderungen von Galaxus erfüllt. Beachte besonders die für die Fiskalvertretung nötigen Angaben in der Fußzeile. +
 *_Tipp:_* Schau dir vorher die zusätzlichen Einstellungen in <<#table-invoices-fiscal-rep>> an. Vielleicht kannst du die dort beschriebenen Hinweise auch direkt in deiner PDF-Vorlage für Rechnungen von Galaxus platzieren?
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » Standort: Schweiz » Dokumente » Rechnung*.
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » Standort: Deutschland » Dokumente » Rechnung*.
 . Wechsele in das Tab *PDF-Vorlage*.
 . Klicke auf *Vorlage hinzufügen*. +
 → Das Bearbeitungsfenster *Neue PDF-Vorlage hochladen* wird geöffnet.
@@ -988,7 +1010,8 @@ PDF-Vorlage für Rechnungen hochladen:
 [.instruction]
 Vorlage für Rechnungen anpassen:
 
-. Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Schweiz » Dokumente » Rechnung » Tab: Vorlage*.
+. Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Deutschland » Dokumente » Rechnung » Tab: Vorlage*.
+. Stelle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* ein.
 . Navigiere zum Bereich *Optionale Elemente unter Artikelpositionstabelle*.
 . Nimm die in <<#table-invoices-fiscal-rep>> beschriebenen Einstellungen vor. +
 *_Tipp:_* Je nachdem, wie du dein Layout gestaltest, kannst du vielleicht auch alle Hinweise in dasselbe Eingabefeld *Zahlungshinweis* einfügen.
@@ -1062,7 +1085,7 @@ Damit diese Informationen auf den Lieferscheinen erscheinen, passt du die Vorlag
 [.instruction]
 Vorlage für Lieferscheine anpassen:
 
-. Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Schweiz » Dokumente » Lieferschein » Tab: Vorlage*.
+. Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Deutschland » Dokumente » Lieferschein » Tab: Vorlage*.
 . Navigiere zum Bereich *Optionale Elemente unter Artikelpositionstabelle*.
 . Nimm die in <<table-delivery-notes>> beschriebenen Einstellungen vor.
 . Prüfe anhand der link:https://partner.digitecgalaxus.ch/hc/de/articles/360016260840-Welche-Dokumente-f%C3%BCge-ich-der-Lieferung-bei-[Dokumentation von Galaxus], ob weitere Anpassungen an deiner Vorlage erforderlich sind. +
@@ -1266,3 +1289,16 @@ Die Kund:in hat die Lieferung aus einem ungerechtfertigten Grund nicht akzeptier
 == FAQ und Fehlersuche
 
 include::partial$plugin-market-not-in-menu.adoc[]
+
+
+[.collapseBox]
+.Ich möchte den EU-Hub mit Fiskalvertretung nutzen. Welche Einstellungen muss ich für die Rechnung beachten?
+--
+
+Voraussetzungen: EU-Hub mit Fiskalvertretung
+
+* Du hast im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport* die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* aktiviert.
+* Du hast im Menü *Einrichtung » Mandant » Standard Shop » Standorte » Deutschland » Dokumente » Rechnung* für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* eingestellt. +
+*_Wichtig:_* Diese Einstellung gilt für alle Rechnungen des Standorts, nicht nur für Galaxus.
+* Du hast im Standort *Deutschland* deine Umsatzsteuer-ID und die Steuersätze für die Schweiz gespeichert.
+--
