--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -1011,7 +1011,8 @@ PDF-Vorlage für Rechnungen hochladen:
 Vorlage für Rechnungen anpassen:
 
 . Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Deutschland » Dokumente » Rechnung » Tab: Vorlage*.
-. Stelle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* ein.
+. Stelle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* ein. +
+*_Wichtig:_* Diese Einstellung gilt für alle Rechnungen des Standorts, nicht nur für Galaxus.
 . Navigiere zum Bereich *Optionale Elemente unter Artikelpositionstabelle*.
 . Nimm die in <<#table-invoices-fiscal-rep>> beschriebenen Einstellungen vor. +
 *_Tipp:_* Je nachdem, wie du dein Layout gestaltest, kannst du vielleicht auch alle Hinweise in dasselbe Eingabefeld *Zahlungshinweis* einfügen.
