--- a/docs/en-gb/modules/markets/pages/galaxus.adoc
+++ b/docs/en-gb/modules/markets/pages/galaxus.adoc
@@ -564,19 +564,19 @@ Can be selected in the Elastic Export configuration for this format.
 
 | *ProductDescription_DE, _mandatory (at least one of four languages), Text_*
 | Standard: *Item » Edit item » [Open item] » Tab: Texts » Item text (de)* +
-or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
+or input field selection under: *Setup » Markets » Galaxus » Item export » Product Data » input field mappings*
 
 | *ProductDescription_EN, _Text_*
 | Standard: *Item » Edit item » [Open item] » Tab: Texts » Item text (en)* +
-or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
+or input field selection under: *Setup » Markets » Galaxus » Item export » Product Data » input field mappings*
 
 | *ProductDescription_FR, _Text_*
 | Standard: *Item » Edit item » [Open item] » Tab: Texts » Item text (fr)* +
-or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
+or input field selection under: *Setup » Markets » Galaxus » Item export » Product Data » input field mappings*
 
 | *ProductDescription_IT, _Text_*
 | Standard: *Item » Edit item » [Open item] » Tab: Texts » Item text (it)* +
-or input field selection under: *System » Markets » Galaxus » Item export » Product Data » input field mappings*
+or input field selection under: *Setup » Markets » Galaxus » Item export » Product Data » input field mappings*
 
 | *MinimumOrderQuantity, _mandatory, integer(10)_*
 | *Item » Edit item » [Open item] » [Open variation] » Tab: Settings » Availability: Min. order quantity*
